<resources>
    <string name="app_name">onlineShop</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="otp_verification">OTP Verification</string>
    <string name="we_will_send_you_an_one_time_password_on_this_mobile_number">We will send you an One Time Password on this mobile number</string>
    <string name="enter_mobile_number">Enter Mobile Number</string>
    <string name="verify_otp">Verify OTP</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="get_otp">GET OTP</string>
    <string name="_1234567890">1234567890</string>
    <string name="_91">+91-</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="_04_20">04/20</string>
    <string name="expiry_date">Expiry Date</string>
    <string name="_444">444</string>
    <string name="cvv">CVV</string>
    <string name="_4454_8565_4245">4454-8565-4245</string>
    <string name="enter_your_card_number">Enter your card number:</string>
    <string name="please_enter_the_following_details">Please Enter the following Details</string>
    <string name="date_time"><![CDATA[Date & Time]]></string>
    <string name="find_discover_choose_buy_online"><![CDATA[Find, Discover, Choose & Buy Online !!]]></string>
    <string name="product_name">Product Name</string>
    <string name="search">Search</string>
</resources>